test-cases/negative/test_015_object_creation_incomplete.lay
# negative test: incomplete object creation
# expected: error should be thrown

the variable person of type Person is a new Person


